force-app/main/default/objects/ScrapTrucksDrivers__c/ScrapTrucksDrivers__c.object-meta.xml
<CustomObject>
    <label>Водії автомобілів (брухт)</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ScrapTrucksDrivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>