force-app/main/default/objects/ScrapTrucksDrivers__c/fields/Automobile__c.field-meta.xml
<CustomField>
    <fullName>Automobile__c</fullName>
    <formula>IF(
				NOT(ISBLANK(ScrapTruck__c)),
				ScrapTruck__r.TruckModel__c + &apos;, держ. № &apos; +  ScrapTruck__r.Name,
				&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Automobile</label>
    <type>Text</type>
</CustomField>