force-app/main/default/objects/ScrapTrucksDrivers__c/fields/ScrapTruck__c.field-meta.xml
<CustomField>
    <fullName>ScrapTruck__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ScrapTruck</label>
    <referenceTo>ScrapTruck__c</referenceTo>
    <relationshipName>ScrapTrucksDrivers</relationshipName>
    <type>Lookup</type>
</CustomField>