force-app/main/default/objects/ScrapTrucksDrivers__c/fields/WorkerOf__c.field-meta.xml
<CustomField>
    <fullName>WorkerOf__c</fullName>
    <formula>IF(
				NOT(ISBLANK(Driver__r.Account.Id)),	Driver__r.Account.Name, &apos;Сторонній перевізник&apos;			  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WorkerOf</label>
    <type>Text</type>
</CustomField>